--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -14,6 +14,11 @@
   PB_RUS_Bitter_Revanchism_desc:0 "The Tsar and his people blame their former Allies of Britain and Germany for all their countries woes and the Current Government encourages this thought religiously."
   PB_RUS_Russian_Nightmare:0 "The Russian Nightmare"
   PB_RUS_Russian_Nightmare_desc:0 "From the frozen wastes of Siberia to the wheat fields of Ukraine there is an almost silent voice of protest against the Tsar's absolutist rule. Political enemies are large in number and even his closest allies would rather see him expelled from government."
+  PB_RUS_Youth:0 "Youth Indoctrination"
+  PB_RUS_Propaganda:0 "24-7 Propaganda"
+  PB_RUS_Re_Education_Camps:0 "Re-Education Camps"
+  PB_RUS_Oaths_Of_Loyalty:0 "Oaths Of Loyalty"
+  PB_RUS_Okhrana_Investments:0 "Okhrana Investments"
   ##########################
   # TRAITS
   ##########################
@@ -24,7 +29,19 @@
   ##########################
   # DECISIONS
   ##########################
-
+  RUS_Political_Promises_Ref:0 "Political Ventures"
+  RUS_Economic_Subsidies:0 "Economic Subsidies"
+  RUS_Contact_Democratic_Sympathizers:0 "Contact Democratic Sympathizers"
+  RUS_Education_Initiatives:0 "Education Initiatives"
+  RUS_Army_Contacts:0 "Army Contacts"
+  RUS_Stage_2:0 "Progress To Stage Two"
+  RUS_Kolchack:0 "Kolchak Is Making Moves"
+  RUS_Political_Promises_Loy:0 "Political Promises"
+  RUS_Secret_Meetings:0 "Secret Meetings"
+  RUS_Bribe_Politicians:0 "Bribe Politicians"
+  RUS_Naval_Connections:0 "Naval Connections"
+  RUS_Indoctrination_Attempts:0 "Indoctrination Attempts"
+  RUS_Stage_2_Loy:0 "Progress To Stage Two"
   ##########################
   # EVENTS
   ##########################
@@ -37,13 +54,66 @@
   russia4title:0 "Nothing But Fools And Dreamers"
   russia4desc:0 "The current protests are a honest insult to the so called glory days. Few attend and for those that do they are no longer seen as heroes of the common man, just mere dreamers believing in a change that will never come. A final message will be sent to those that still believe."
   russia4opta:0 "There Outnumbered"
+  russia5title:0 "Out In The Cold"
+  russia5desc:0 "The Russian winter offered little help to Dmitri's declining pulse. In the blistering cold he was left out to die, food for the wildlife if lucky. A simple distrust of the government left him dead. Apparently this so called national party is not one that takes kindly to disagreement. For the people they announced after the Tsar's rather unfortunate death though that was clearly a blatant lie. Now he lays in a pit of rotting corpses, awaiting natures endless cycle of clean up duty."
+  russia5opta:0 "I Prefer Summer"
+  russia6title:0 "The Final Frontier"
+  russia6desc:0 ""
+  russia6opta:0 ""
+  russia7title:0 "The Perfect Citizen"
+  russia7desc:0 ""
+  russia7opta:0 "Glorious Isn't He?"
+  russia8title:0 "A Dark Past"
+  russia8desc:0 ""
+  russia8opta:0 "And An Even Darker Future"
+  russia9title:0 "Two Parties In One"
+  russia9desc:0 ""
+  russia9opta:0 "For The Reformists"
+  russia9optb:0 "For The Loyalists"
+  russia10title:0 "The Loyalists Succeed"
+  russia10desc:0 ""
+  russia10opta:0 "For The Loyalists"
+  russia11title:0 "The Reformists Succeed"
+  russia11desc:0 ""
+  russia11opta:0 "For The Reformists"
+  russia12title:0 "The Russian Psyche"
+  russia12desc:0 ""
+  russia12opta:0 ""
   ##########################
-  # TOOLTIPS
+  # TOOLTIPS n Shit
   ##########################
   rus_attempt:0 "An assassination attempt has been made on the Tsar's life."
   rus_attempt_state:0 "A §RNew Order§! awaits Europe. They shall run scared, tired, and ultimately defenseless."  
   RUS_State:0 "Russian Imperiya"
- 
+  RUS_Holy:0 "Holy Order Of Russia"
+  Russkiy_natsional'nyy_front:0 "Russkiy Natsional'nyy Front"
+  RUS_Russkiy_natsional'nyy_front:0 "Natsional'nyy Front"
+  russia2tooltip:0 "§R---The Seperation Between Church And State Will Be Reversed And The Holy Trinity Will Be Fully Embraced!---§!"
+  russia3tooltip:0 "§gA cult of personality will develop around Pytor.§!"
+  russia4tooltip:0 "§R--The Party Will Unite Or Perish!--§!"
+  russia5tooltip:0 "§R--£decision_icon_small Stage Two Of Pyotr's Grand Plan Will Commence!--§!"
+  russia6tooltip:0 "§R--£decision_icon_small Stage Three Of Pyotr's Grand Plan Will Commence!--§!"
+  russia7tooltip:0 "Your persepective will be that of the loyalist faction"
+  russia8tooltip:0 "Your persepective will be that of the reformist faction"
+  russia9tooltip:0 "The Reformists will lose §G5§! Strength and the Loyalists will gain §R7§! Strength"
+  russia10tooltip:0 "The Reformists will gain §G4§! strength and the Loyalists will lose §R3§!"
+  russia11tooltip:0 "The Reformists will gain §G2§! strength and the Loyalists will lose §R1§!"
+  russia12tooltip:0 "The Reformists will gain §G4§! strength and the Loyalists will lose §R3§!"
+  russia13tooltip:0 "The Reformists will gain §G3§! strength and the Loyalists will lose §R2§!"
+  russia14tooltip:0 "The Reformists will gain §G6§! strength and the Loyalists will lose §R5§!"
+  russia15tooltip:0 "The Reformists will gain §R6§! strength and the Loyalists will lose §G4§!"
+  russia16tooltip:0 "The Reformists will lose §R1§! strength and the Loyalists will gain §G3§!"
+  Loyalist_Picked:0 "The Loyalists Have Been Picked"  
+  Reformist_Picked:0 "The Reformists Have Been Picked"
+  russia17tooltip:0 "The Reformists will lose §R4§! strength and the Loyalists will gain §G6§!"
+  russia18tooltip:0 "The Reformists will lose §R3§! strength and the Loyalists will gain §G5§!"
+  russia19tooltip:0 "The Reformists will lose §R2§! strength and the Loyalists will gain §G4§!"   
+  russia20tooltip:0 "The Reformists will lose §R2§! strength and the Loyalists will gain §G2§!"
+  russia21tooltip:0 "The Reformists will lose §R4§! strength and the Loyalists will gain §G6§!"
+  russia22tooltip:0 "\n§R---It His §RHighly Recommended That You Save PP For The Following Focus---§!"
+  russia23tooltip:0 "\n§C---Russia Will Look Towards The Future And Bathe In A New Golden Age---§!"
+  RUS_Reformists:0 "The Reformists Have United The Party"
+  RUS_Loyalists:0 "The Loyalists Have United The Party"
   ##########################
   # FOCUS
   ##########################
@@ -62,9 +132,7 @@
   RUS_loyalty_or_else:0 "Loyalty Or Else"
   RUS_absolve_russias_sins:0 "Absolve Russia's Sins"
   RUS_a_new_holy_trinity:0 "A New Holy Trinity"
-  RUS_stage_3:0 "§RStage 3§!"
-  RUS_stage_2:0 "§RStage 2§!"
-  RUS_stage_1:0 "§RStage 1§!"
+  RUS_stage_1:0 "Unite The Party"
   RUS_once_upon_a_time:0 "Once Upon A Time"
   RUS_the_tsar_rules_eternal:0 "The Tsar Rules Eternal"
   RUS_the_army_knows_best:0 "The Army Knows Best"
@@ -156,3 +224,20 @@
   RUS_influence_serbia:0 "Influence Serbia"
   RUS_bessarabia_for_overlordship:0 "Bessarabia For Overlordship"
   RUS_no_sea_uncontrolled:0 "No Sea Uncontrolled"
+  RUS_Towards_A_Brighter_Future:0 "Towards A Brighter Future"
+  ##########################
+  # Party Loyalty Mechanic n shit
+  ##########################
+  russia1tooltip:0 "\n§YUnlocks§! £decision_icon_small the §CParty Loyalty§! mechanic.\n\n"
+  RUS_Party_Loyaly_DEC:0 "Your Party Loyalty will §RDecrease§!"   
+  RUS_Party_Loyaly_INC:0 "Your Party Loyalty will §GIncrease§!"
+  PB_RUS_Party_Loyalty:0 "Party Loyalty"
+  PB_RUS_Party_Loyalty_desc:0 "The Russian state is one bountiful in corruption. Everyday a figure drifts to the other side of the political spectrum, swearing no loyalty to both their old and new positions. Only in public they do. It is about time we eradicated this mindset of profit first, nation second.\n\n"
+  RUS_Party_Loyalty:0 "Party  Loyalty  is at §Y[?Party_Loyalty]%§!"
+  RUS_scales_Neu:0 "\n\n\nThe §CScales§! Tip To §YNo Side§!"
+  RUS_scales_Pos:0 "\n\n\nThe §CScales§! Tip Towards The §YReformists§!"
+  RUS_scales_Neg:0 "\n\n\nThe §CScales§! Tip Towards The §YLoyalists§!"
+  PB_RUS_Scales:0 "An Uneasy Peace"
+  PB_RUS_Scales_desc:0 "The internal political sphere of the Russian National Front is one divided by wishes and dreams belonging to its two biggest patrons, the Russian reformists lead by field marshal Lavr Kornilov, and the Loyalists lead by admiral Alexander Kolchak. Each sub party seeks its own policies and poor Mr Pyotr must sit back and watch these feral dogs fight it out.\n\nLoyalist Faction Strength: §Y[?Rus_Loyalists]§!                                      Reformist Faction Strength: §Y[?Rus_Reformists]§!"
+  RUS_Lavr_Is_Making_Moves:0 "Lavr Is Making Moves"
+  RUS_Kolchak_Is_Making_Moves:0 "Kolchak Is Making Moves"
