--- a/localisation/PB_Opinion_Modifiers_l_english.yml
+++ b/localisation/PB_Opinion_Modifiers_l_english.yml
@@ -9,3 +9,4 @@
   hostile_diplomacy:0 "Hostile Diplomacy"
   former_imperial_subjects:0 "Former Imperial Subjects"
   supported_enemy:0 "Supported Our Enemies"
+  rising_power:0 "New World Order"
