--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -19,6 +19,11 @@
   PB_RUS_Re_Education_Camps:0 "Re-Education Camps"
   PB_RUS_Oaths_Of_Loyalty:0 "Oaths Of Loyalty"
   PB_RUS_Okhrana_Investments:0 "Okhrana Investments"
+  PB_RUS_Police_State:0 "The Russian Police State"
+  PB_RUS_Gold_Standard:0 "Abandoning The Gold Standard"
+  PB_RUS_Harsh_Quotas:0 "Harsh Quotas"
+  PB_RUS_Foreign_Equipment:0 "A Modernising Industry"
+  PB_RUS_Tank_Production:0 "Tank Production Focuses"
   ##########################
   # TRAITS
   ##########################
@@ -79,6 +84,42 @@
   russia12title:0 "The Russian Psyche"
   russia12desc:0 ""
   russia12opta:0 ""
+  russia13title:0 "Russia's Most Royal Family"
+  russia13desc:0 ""
+  russia13opta:0 ""
+  russia14title:0 "Off With Their Heads!"
+  russia14desc:0 ""
+  russia14opta:0 ""
+  russia15title:0 "United And Whole"
+  russia15desc:0 ""
+  russia15opta:0 ""
+  russia16title:0 "The Stagnation Issue"
+  russia16desc:0 ""
+  russia16opta:0 ""
+  russia17title:0 "Year One"
+  russia17desc:0 ""
+  russia17opta:0 ""
+  russia18title:0 "Year Two"
+  russia18desc:0 ""
+  russia18opta:0 ""
+  russia19title:0 "The Heart Of Russia"
+  russia19desc:0 ""
+  russia19opta:0 ""
+  russia20title:0 "Year Three"
+  russia20desc:0 ""
+  russia20opta:0 ""
+  russia21title:0 "The Rubber Issue"
+  russia21desc:0 ""
+  russia21opta:0 ""
+  russia22title:0 "Year Four"
+  russia22desc:0 ""
+  russia22opta:0 ""
+  russia23title:0 "Military Investments"
+  russia23desc:0 ""
+  russia23opta:0 ""
+  russia24title:0 "Regaining Control"
+  russia24desc:0 ""
+  russia24opta:0 ""
   ##########################
   # TOOLTIPS n Shit
   ##########################
@@ -112,6 +153,11 @@
   russia21tooltip:0 "The Reformists will lose §R4§! strength and the Loyalists will gain §G6§!"
   russia22tooltip:0 "\n§R---It His §RHighly Recommended That You Save PP For The Following Focus---§!"
   russia23tooltip:0 "\n§C---Russia Will Look Towards The Future And Bathe In A New Golden Age---§!"
+  russia24tooltip:0 "The Four Year Plan Will Begin"
+  russia25tooltip:0 "Stage One Of The Four Year Plan Will Commence"
+  russia26tooltip:0 "Stage Two Of The Four Year Plan Will Commence"
+  russia27tooltip:0 "Stage Three Of The Four Year Plan Will Commence"
+  russia28tooltip:0 "Stage Four Of The Four Year Plan Will Commence"
   RUS_Reformists:0 "The Reformists Have United The Party"
   RUS_Loyalists:0 "The Loyalists Have United The Party"
   ##########################
@@ -152,7 +198,7 @@
   RUS_order_above_all:0 "Order Above All"
   RUS_land_lord_privileges:0 "Land Lord Privileges"
   RUS_the_white_terror:0 "The White Terror"
-  RUS_just_like_aurelian:0 "Lust Like Aurelian"
+  RUS_just_like_aurelian:0 "Just Like Aurelian"
   RUS_mandatory_happiness:0 "Mandatory Happiness"
   RUS_high_command_reforms:0 "High Command Reforms"
   RUS_only_the_best:0 "Only The Best"
@@ -225,6 +271,32 @@
   RUS_bessarabia_for_overlordship:0 "Bessarabia For Overlordship"
   RUS_no_sea_uncontrolled:0 "No Sea Uncontrolled"
   RUS_Towards_A_Brighter_Future:0 "Towards A Brighter Future"
+  RUS_four_year_plan:0 "The Four Plan"
+  RUS_year_1:0 "Year One"
+  RUS_the_stagnation_issue:0 "The Stagnation Issue"
+  RUS_abandon_the_gold_standard:0 "Abandon The Gold Standard"
+  RUS_build_the_mills:0 "Build The Mills"
+  RUS_tend_to_the_farmers:0 "Tend To The Farmers"
+  RUS_economic_overdrive:0 "Economic Overdrive"
+  RUS_year_2:0 "Year Two"
+  RUS_industrial_grants:0 "Industrial Grants"
+  RUS_new_assembly_lines:0 "New Assembly Lines"
+  RUS_connect_the_big_cities:0 "Connect The Big Cities"
+  RUS_labour_facilities:0 "Forced Labour Facilities"
+  RUS_raise_the_quotas:0 "Raise The Quotas"
+  RUS_year_3:0 "Year Three" 
+  RUS_new_complexes:0 "New Complexes"
+  RUS_revive_the_shipping_industry:0 "Revive The Shipping Industry"
+  RUS_the_rubber_issue:0 "The Rubber Issue"
+  RUS_import_foreign_equipment:0 "Import Foreign Equipment"
+  RUS_new_extraction_methods:0 "New Extraction Methods"
+  RUS_year_4:0 "Year Four"
+  RUS_military_investments:0 "Military Investments"
+  RUS_heavy_water_theories:0 "Heavy Water Theories"
+  RUS_institute_for_electrical_advancements:0 "Institute For Electrical Advancements"
+  RUS_focus_on_landship_production:0 "Focus On Landship Production"
+  RUS_invest_in_infrastructure:0 "Invest In Infastructure"  
+  RUS_the_russian_psyche:0 "The Russian Psyche"
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
