More Russian Stuff

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -24,6 +24,7 @@
   PB_RUS_Harsh_Quotas:0 "Harsh Quotas"
   PB_RUS_Foreign_Equipment:0 "A Modernising Industry"
   PB_RUS_Tank_Production:0 "Tank Production Focuses"
+  PB_RUS_Grey:0 "The Grey Initiative"
   ##########################
   # TRAITS
   ##########################
@@ -120,9 +121,21 @@
   russia24title:0 "Regaining Control"
   russia24desc:0 ""
   russia24opta:0 ""
+  russia25title:0 "Russian Investments"
+  russia25desc:0 ""
+  russia25opta:0 ""
+  russia26title:0 "The Trans-Siberian Railway"
+  russia26desc:0 ""
+  russia26opta:0 ""
+  russia27title:0 "Our Father, who art in heaven"
+  russia27desc:0 ""
+  russia27opta:0 "A Purist Russia"
+  russia27optb:0 "A True Russia"
+  russia27optc:0 "A Liberated Russia"
   ##########################
   # TOOLTIPS n Shit
   ##########################
+  RUS_Country_Desc_Topbar:0 ""
   rus_attempt:0 "An assassination attempt has been made on the Tsar's life."
   rus_attempt_state:0 "A §RNew Order§! awaits Europe. They shall run scared, tired, and ultimately defenseless."  
   RUS_State:0 "Russian Imperiya"
@@ -160,6 +173,12 @@
   russia28tooltip:0 "Stage Four Of The Four Year Plan Will Commence"
   RUS_Reformists:0 "The Reformists Have United The Party"
   RUS_Loyalists:0 "The Loyalists Have United The Party"
+  russia29tooltip:0 "Various states will receive infrastructure improvements"
+  tension_RUS.1.t:0 "A Not So Royal Russia" 
+  tension_RUS.2.t:0 "Off With Their Heads!"
+  Winter_War:0 "The Winter War Has Started"
+  China_Collapse:0 "China Has Collapsed"
+  RUS_WW2:0 "Europe Is Alight"
   ##########################
   # FOCUS
   ##########################
@@ -297,6 +316,55 @@
   RUS_focus_on_landship_production:0 "Focus On Landship Production"
   RUS_invest_in_infrastructure:0 "Invest In Infastructure"  
   RUS_the_russian_psyche:0 "The Russian Psyche"
+  RUS_the_scandinavian_front:0 "The Scandinavian Front"
+  RUS_fortify_petrograd:0 "Fortify Petrograd"
+  RUS_winter_specialists:0 "Winter Specialists"
+  RUS_new_generals:0 "New Generals"
+  RUS_new_roads:0 "New Roads"
+  RUS_mobilize_reserves_s:0 "Mobilize Reserves"
+  RUS_the_asian_front:0 "The Asian Front"
+  RUS_fortify_urajio:0 "Fortify Urajio"
+  RUS_test_the_landship:0 "Test The Landship"
+  RUS_convince_the_warlords:0 "Convince The Warlords"
+  RUS_release_toxins:0 "Release Toxins"
+  RUS_mobilize_reserves_a:0 "Mobilize Reserves"
+  RUS_the_european_front:0 "The European Front"
+  RUS_foreign_battalions:0 "Foreign Battalion"
+  RUS_study_the_paratrooper:0 "Study The Paratrooper"
+  RUS_heavy_batteries:0 "Heavy Batteries"
+  RUS_crush_the_reds:0 "Crush The Reds"
+  RUS_mobilize_reserves_e:0 "Mobilize Reserves"
+  RUS_the_russian_armed_forces:0 "The Russian Armed Forces"
+  RUS_old_ways_proven_methods:0 "Old Ways, Proven Methods"
+  RUS_reintroduce_the_bayonet:0 "Reintroduce The Bayonet"
+  RUS_human_waves:0 "Human Waves"
+  RUS_develop_doctrine_beliefs:0 "Develop Doctrine Beliefs"
+  RUS_russo_italian_artillery_concordat:0 "Russo-Italian Artillery Concordat"
+  RUS_crater_theories:0 "Crater Theories" 
+  RUS_bomber_focuses:0 "Bomber Focuses"
+  RUS_heavy_fighter_devlopments:0 "Heavy Fighter Developments"
+  RUS_eat_the_earth_doctrine:0 "Eat The Earth Doctrine"
+  RUS_floating_behemoths_and_loyal_dogs:0 "Floating Behemoths And Loyal Dogs"
+  RUS_big_guns_theory:0 "Big Guns Theory"
+  RUS_destroyer_improvements:0 "Destroyer Improvements"
+  RUS_dockyard_expansions_right:0 "Dockyard Expansions"
+  RUS_new_minds_new_technologies:0 "New Minds, New Technologies"
+  RUS_encourage_war_room_debates:0 "Encourage War Room Debates"
+  RUS_experimental_rifles:0 "Experimental Rifles"
+  RUS_heavy_landship_research:0 "Heavy Landship Research"
+  RUS_franco_russian_landship_concordat:0 "Franco-Russian Landship Concordat"
+  RUS_mobility_theories:0 "Mobility Theories"
+  RUS_fighter_focuses:0 "Fighter Focuses"
+  RUS_cas_developments:0 "CAS Developments"
+  RUS_air_supremacy_doctrine:0 "Air Supremacy Doctrine"
+  RUS_floating_airfields_and_underwater_wolf_packs:0 "Floating Airfields And Underwater Wolf Packs"
+  RUS_the_invisible_threat:0 "The Invisible Threat"
+  RUS_new_naval_minds:0 "New Naval Minds"
+  RUS_dockyard_expansions_left:0 "Dockyard Expansions"
+  RUS_war_games:0 "War Games"
+  RUS_revolutionary_stratagems:0 "Revolutionary Stratagems"
+  RUS_frontline_okhrana_divisions:0 "Frontline Okhrana Divisions"
+  RUS_okhrana_generals:0 "Okhrana Generals"
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
