Japan Work I forgot to push

--- a/localisation/PB_Japan_l_english.yml
+++ b/localisation/PB_Japan_l_english.yml
@@ -18,76 +18,109 @@
   ##########################
   # FOCUSES
   ##########################
-  PB_JAP_Future_of_Republic:0 "The Rising Tensions"
-  PB_JAP_22nd_Party_Congress:0 "The XXII Congress of the Directory"
-  PB_JAP_Economy_Question:0 "Question of the Economy"
-  PB_JAP_Military_Question:0 "Question of the Military"
-  PB_JAP_Politics_Question:0 "Question of Politics"
-  PB_JAP_Everything_goes_to_Shit:0 "Things Fall Apart"
+  PB_JAP_Future_of_Republic:0 "Begin the 10th Party Congress"
+  PB_JAP_Debates_on_Unions:0 "Debates on the Status of Unions"
+  PB_JAP_Debates_on_Militias:0 "Debates on the Regional Militias"
+  PB_JAP_Debates_on_Military:0 "Debates on Military Powers"
+  PB_JAP_Party_Congress_Conclusion:0 "Another Successful Congress"
+  PB_JAP_Assassination_Attempt:0 "...Or Not"
 
-  PB_JAP_Sakurakai_Succeeded:0 "The Grand Protector Falls"
-  PB_JAP_New_Foundations:0 "Build New Foundations"
-  PB_JAP_New_Party_Congress:0 "Begin the XXIII Party Congress"
-  PB_JAP_Disband_Revolutionary_Guards:0 "Disband the Revolutionary Guards"
-  PB_JAP_Purge_Hardliners:0 "Purge the Hardliners"
-  PB_JAP_Empty_the_Camps:0 "Empty Out the Labour Camps"
-  PB_JAP_Abolish_Show_Trials:0 "Abolish Show Trials"
-  PB_JAP_Party_Congress_Completed:0 "The XXIII Party Congress Completed"
+  PB_JAP_Hashimoto_Loyalists:0 "Loyalty to Hashimoto"
 
-  PB_JAP_Anarchist_Japan:0 "Embrace Hajime Thought"
-  PB_JAP_Cultural_Revolution:0 "Cultural Reconstruction"
-  PB_JAP_Self_Management:0 "Worker's Self Management"
-  PB_JAP_Cultural_Revolution_Abolish_Marriage:0 "Abolish Marriage"
-  PB_JAP_Self_Management_Power_to_the_Communes:0 "Shift Power to the Communes"
-  PB_JAP_Self_Management_Labour_Vouchers:0 "Introduce the Rōdō bauchā"
-  PB_JAP_Cultural_Revolution_Legalize_Homosexuality:0 "Legalize Homosexuality"
-  PB_JAP_Self_Management_Agrarian_Idealism:0 "Agrarian Idealism"
-  PB_JAP_Self_Management_Industrial_Cooperatives:0 "Industrial Cooperatives"
-  PB_JAP_Cultural_Revolution_Burakumin_Reparations:0 "Reparations to the Burakumin"
-  PB_JAP_Self_Management_Abundance_for_All:0 "Abundance for All"
-  PB_JAP_Evolution_of_Revolution:0 "The Evolution of Revolution"
+  PB_JAP_Sakurakai:0 "A Time for Action"
 
-  PB_JAP_Socialist_Japan:0 "A Republic for the People"
-  PB_JAP_Establish_the_Peoples_Police:0 "Establish the Jinmin kakumei keisatsu"
-  PB_JAP_Repurpose_the_Labour_Camps:0 "Repurpose the Labour Camps"
-  PB_JAP_Central_Planning:0 "Chūōkeikaku"
-  PB_JAP_Limited_Markets:0 "Experiment with a Limited Market"
-  PB_JAP_Mass_Collectivization:0 "Maintain the Course of Collectivization"
-  PB_JAP_Social_Democratic_Reforms:0 "Social Democratic Reforms"
-  PB_JAP_Determine_Party_Restrictions:0 "Determine Legal Parties"
-  PB_JAP_Five_Year_Plan:0 "Launch the 5-Kanen keikaku"
-  PB_JAP_Basic_Needs:0 "Bread and Land"
-  PB_JAP_Embrace_Militarization:0 "Embrace Societal Militarization"
-  PB_JAP_Labour_Quotas:0 "Set Down Labour Quotas"
-  PB_JAP_Fortress_Secure:0 "The People's Fortress Secured"
+  ##########################
+  # DECISIONS
+  ##########################
+  PB_JAP_Sakurakai_Plot:0 "The Secret War"
+  PB_JAP_Sakurakai_Plot_desc:0 "\n\n\n\n\n\nIt has become abundantly clear that reactionaries are now operating in Japan and attempting to undo the Revolution we fought so hard to achieve. The assassination attempt on Kingoro Hashimoto, Grand Protector of the Japanese Revolution, has revealed the hand of these perfidious forces. If we are to preserve the Japanese way of life and our Republic, these forces must be eliminated.\n\nThe Current Plot Power of the Sakurakai is at §Y[?JAP.Sakurakai_Plot_Power]%§!\n\nThe Current Level of Suspicion against the Sakurakai is at §Y[?JAP.Sakurakai_Suspicion]%§!\n\n[GET_ISHII_STATUS]\n\n[GET_NAGANO_STATUS]\n\n[GET_NOSAKA_STATUS]\n\n[GET_OKAWA_STATUS]\n\n§YThe Coup will happen at the conclusion of the timer. In order to succeed, the Coup's Plot Power must be above 50% and Suspicion below 50%, and any pro-Hardliner individuals in the government must be eliminated. In order to prevent the coup, Plot Power must be below 50% or Suspicion must be above 50% and all pro-reformist individuals must be removed. Failing to remove certain individuals if the coup is successful may have consequences.§!\n"
+  JAP_Plot_Timeout:0 "The Sakurakai Plot Proceeds"
+  JAP_Plot_Timeout_desc:0 "The Sakurakai Plot will begin in earnest, regardless of whether or not those involved are prepared.\n\nIf the plot is to succeeed, §YPLOT POWER§! must be above 50% and §YSUSPICION§! must be below 50% before the timer concludes.\n\nIf the Plot is to be defeated, either §YPLOT POWER§! must be below 50% or §YSUSPICION§! must be above 50%.\n\nIf certain individuals are not dealt with before the Coup begins, they may attempt to take actions against a successful post-coup government."
+  JAP_Plot_Power_Timeout:0 "Sakurakai Movements"
+  JAP_Investigation_Timeout:0 "Loyalist Movements"
 
-  PB_JAP_Sakurakai_Failed:0 "The Revolution Triumphant"
-  PB_JAP_Traitors:0 "Everyone is a Goddamned Traitor"
-  PB_JAP_Roll_out_the_Guillotines:0 "Roll Out the Guillotines"
-  PB_JAP_Purge_the_Bureaucrats:0 "Hang the Bureaucrats"
-  PB_JAP_Redemption_Camps:0 "Establish the Redemption Camps"
-  PB_JAP_Purge_Reformists:0 "Hang the Reformists"
-  PB_JAP_Mobilize_the_Guards:0 "Mobilize the Kakumei-tekina gādo"
-  PB_JAP_Purge_the_Military:0 "Purge the Military Just in Case"
-  PB_JAP_Expand_the_Guards:0 "Expand the Revolutionary Guards"
-  PB_JAP_More_Purges:0 "No One is Safe"
-  PB_JAP_Father_of_the_Revolution:0 "Father of the Revolution"
-  PB_JAP_Reolutionary_Cinema:0 "Film as a Tool of the Revolution"
-  PB_JAP_Childhood_Indoctrination:0 "Childhood Indoctrination"
-  PB_JAP_Political_Officers:0 "Seiji yakuin"
-  PB_JAP_State_of_Perpetual_Mobilization:0 "State of Perpetual Mobilization"
-  PB_JAP_Democracy_is_Reactionary:0 "Democracy is Reactionary"
-  PB_JAP_Government_by_Rivalry:0 "Bureaucratic Darwinism"
-  PB_JAP_Boot_on_Face:0 "A Boot Stamping on a Human Face, Forever"
-  PB_JAP_Reform_the_Military:0 "Reform the Republican Army"
-  PB_JAP_New_Officers:0 "Rehabilitate the Officer Corps"
-  PB_JAP_Control_Schools:0 "New Revolutionary Schools"
-  PB_JAP_Reward_Loyalty:0 "Reward Loyalty"
-  PB_JAP_Personality_Cult:0 "Personality Cult"
-  PB_JAP_Mass_Industrialization:0 "Industrialization with Extreme Prejudice"
-  PB_JAP_New_Revolutionary_Religion:0 "Cult of the Saikō no sonzai"
-  PB_JAP_Ban_Reactionary_Religion:0 "Ban on Reactionary Faith"
-  PB_JAP_Revolutionary_Imperialism:0 "Revolutionary Imperialism"
+  JAP_Plot_power_Increase_Small:0 "The Power of the Sakurakai Plot will §YINCREASE§! by a small amount"
+  JAP_Plot_power_Increase_Large:0 "The Power of the Sakurakai Plot will §YINCREASE§! by a large amount"
+
+  JAP_Plot_power_Decrease_Small:0 "The Power of the Sakurakai Plot will §YDECREASE§! by a small amount"
+  JAP_Plot_power_Decrease_Large:0 "The Power of the Sakurakai Plot will §YDECREASE§! by a large amount"
+
+  JAP_Suspicion_Increase_Small:0 "Suspicion against the Sakurakai Plot will §YINCREASE§! by a small amount"
+  JAP_Suspicion_Increase_Large:0 "Suspicion against the Sakurakai Plot will §YINCREASE§! by a large amount"
+
+  JAP_Suspicion_Decrease_Small:0 "Suspicion against the Sakurakai Plot will §YDECREASE§! by a small amount"
+  JAP_Suspicion_Decrease_Large:0 "Suspicion against the Sakurakai Plot will §YDECREASE§! by a large amount"
+
+
+  ##########################
+  # EVENTS
+  ##########################
+  repjap.1.t:0 "Opening of the 10th Party Congress"
+  repjap.1.d:0 "PLACEHOLDER The Tenth Party Congress of the Japanese Republic begins, introducing the primary factions"
+  repjap.1.a:0 "Welcome. Let's begin."
+
+  repjap.2.t:0 "Debates on the Status of Unions"
+  repjap.2.d:0 "PLACEHOLDER Decision on whether to allow independent unions or to maintain the structure of a single, state reliant union for all trades"
+  repjap.2.a:0 "Maintain the current Union structure"
+  repjap.2.b:0 "Shift towards independently managed unions"
+
+  repjap.3.t:0 "Debates on the Status of Regional Militias"
+  repjap.3.d:0 "PLACEHOLDER Decision on whether to integrate the regional people's militias into the Revolutionary Guards or allow them to continue operating independently"
+  repjap.3.a:0 "Centralize the Militias under the Revolutionary Guard"
+  repjap.3.b:0 "Allow the Militias to continue functioning independently"
+
+  repjap.4.t:0 "Debates on the Political Status of the Military"
+  repjap.4.d:0 "PLACEHOLDER Decision on whether to maintain commissars to ensure the military is politically loyal or to allow the military to remain politically independent but potentially disloyal"
+  repjap.4.a:0 "Establish and expand the role of Political Officers"
+  repjap.4.b:0 "Allow the Army to remain politically independent"
+
+  repjap.5.t:0 "Conclusion of the Party Conference"
+  repjap.5.d:0 "PLACEHOLDER The Party Congress ends with a decisive Hashimoto victory regardless of player decision, angering reformists and laying the groundwork for major political unrest"
+  repjap.5.a:0 "Congratulations to our Grand Protector"
+
+  repjap.6.t:0 "Violence on the Streets of Tokyo"
+  repjap.6.d:0 "PLACEHOLDER Hashimoto's attempt to further consolidate power angers most of the government and leads to an assassination attempt, with the subsequent Revolutionary Guard crackdown leading to widespread riots in Tokyo"
+  repjap.6.a:0 "We must find those responsible!"
+  repjap.6.b:0 "That was too risky, we need to be more careful"
+
+  repjap.7.t:0 "The Sakurakai is Successful"
+  repjap.7.d:0 "PLACEHOLDER Backed into a corner by the overwhelming Sakurakai forces, Hashimoto refuses to relinquish power and commits suicide. The Sakurakai are victorious and can begin to govern Japan."
+  repjap.7.a:0 "Japan is free of tyranny at last."
+
+  repjap.8.t:0 "The Sakurakai are Defeated"
+  repjap.8.d:0 "PLACEHOLDER With high enough suspicion and defanged by the Revolutionary Guards, the Sakurakai Plot is easily crushed and those involved executed. Hashimoto's Rule is consolidated."
+  repjap.8.a:0 "The Revolution carries on."
+
+  repjap.9.t:0 "The Sakurakai is Successful"
+  repjap.9.d:0 "PLACEHOLDER Backed into a corner by the overwhelming Sakurakai forces, Hashimoto refuses to relinquish power and commits suicide. The Sakurakai are victorious and can begin to govern Japan, but having failed to remove Ishii, the Revolutionary Guards overpower them and seize control"
+  repjap.9.a:0 "The National struggle must now begin"
+
+  repjap.10.t:0 "The Sakurakai is Successful"
+  repjap.10.d:0 "PLACEHOLDER Backed into a corner by the overwhelming Sakurakai forces, Hashimoto refuses to relinquish power and commits suicide. The Sakurakai are victorious and can begin to govern Japan, but having failed to remove Okawa, he rallies the radical Pan-Asianists to wrest control from the reformists"
+  repjap.10.a:0 "We must safeguard the Pan-Asian ideal"
+
+  ##########################
+  # SAKURAKAI MECHANIC
+  ##########################
+  Ishii_Unknown:0 "Shiro Ishii's loyalties are currently  §YUNKNOWN§!"
+  Ishii_Loyal_Hardliners:0 "Shiro Ishii's loyalties are with the §RHardliners§!"
+  Ishii_Loyal_Reformists:0 "Shiro Ishii's loyalties are with the §GSakurakai§!"
+  Ishii_Purged:0 "Shiro Ishii has been  §RELIMINATED§!"
+
+  JAP_Nagano_Unknown:0 "Osami Nagano's loyalties are currently  §YUNKNOWN§!"
+  JAP_Nagano_Loyal_Hardliners:0 "Osami Nagano's loyalties are with the §RHardliners§!"
+  JAP_Nagano_Loyal_Reformists:0 "Osami Nagano's loyalties are with the §GSakurakai§!"
+  JAP_Nagano_Purged:0 "Osami Nagano has been  §RELIMINATED§!"
+
+  JAP_Nosaka_Unknown:0 "Sanzo Nosaka's loyalties are currently  §YUNKNOWN§!"
+  JAP_Nosaka_Loyal_Hardliners:0 "Sanzo Nosaka's loyalties are with the §RHardliners§!"
+  JAP_Nosaka_Loyal_Reformists:0 "Sanzo Nosaka's loyalties are with the §GSakurakai§!"
+  JAP_Nosaka_Purged:0 "Sanzo Nosaka has been  §RELIMINATED§!"
+
+  JAP_Okawa_Unknown:0 "Shūmei Ōkawa's loyalties are currently  §YUNKNOWN§!"
+  JAP_Okawa_Loyal_Hardliners:0 "Shūmei Ōkawa's loyalties are with the §RHardliners§!"
+  JAP_Okawa_Loyal_Reformists:0 "Shūmei Ōkawa's loyalties are with the §GSakurakai§!"
+  JAP_Okawa_Purged:0 "Shūmei Ōkawa has been  §RELIMINATED§!"
 
 
   ##########################
